<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_care_under"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_care_under"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ads"
        app:layout_constraintBottom_toTopOf="@+id/btn_share"/>

    <ImageView
        android:id="@+id/img_care_heart"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:src="@drawable/img_care_heart2"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/img_care_under"
        app:layout_constraintStart_toStartOf="@id/img_care_under" />

    <ImageView
        android:id="@+id/img_care_over"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/img_care_over"
        app:layout_constraintStart_toStartOf="@id/img_care_under"
        app:layout_constraintEnd_toEndOf="@id/img_care_under"
        app:layout_constraintTop_toTopOf="@id/img_care_under"
        app:layout_constraintBottom_toBottomOf="@id/img_care_under"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_rounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        app:icon="@drawable/ic_rounded_corner"
        app:iconTint="@android:color/white"
        android:layout_margin="@dimen/usual_margin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_share"
        app:layout_constraintTop_toTopOf="@id/btn_share"
        app:layout_constraintBottom_toBottomOf="@id/btn_share"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/btn_share"
        android:backgroundTint="@color/colorPrimary"
        app:iconTint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/usual_margin"
        app:icon="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/btn_rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_care_under"
        app:layout_constraintBottom_toTopOf="@id/adView" />

    <ImageView
        android:id="@+id/ads"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/ads_bp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ads_info"
        android:layout_marginStart="@dimen/usual_margin"
        android:layout_marginTop="@dimen/usual_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ads" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />


</androidx.constraintlayout.widget.ConstraintLayout>